--- a/index.html
+++ b/index.html
@@ -5,4 +5,16 @@
 <body>
     <h1>Eva</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore hic perspiciatis deserunt quia repellendus quo, quod rem, optio ut autem earum, laudantium unde adipisci nesciunt ipsa ea et? Sint, veritatis!</p>
+    <ol>
+        <li>Butter</li>
+        <li>Milk</li>
+        <li>Eggs</li>
+        <li>Cereal</li>
+    </ol>
+    <ul>
+        <li>Butter</li>
+        <li>Milk</li>
+        <li>Eggs</li>
+        <li>Cereal</li>
+    </ul>
 </body>
