--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <h1>Eva</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore hic perspiciatis deserunt quia repellendus quo, quod rem, optio ut autem earum, laudantium unde adipisci nesciunt ipsa ea et? Sint, veritatis!</p>
     <ol>
-        <li>Butter</li>
-        <li>Milk</li>
-        <li>Eggs</li>
-        <li>Cereal</li>
+        <li>Education 1</li>
+        <li>Education 2</li>
+        <li>Education 3</li>
+        <li>Education 4</li>
     </ol>
     <ul>
-        <li>Butter</li>
-        <li>Milk</li>
-        <li>Eggs</li>
-        <li>Cereal</li>
+        <li>Skills 1</li>
+        <li>Skills 2</li>
+        <li>Skills 3</li>
+        <li>Skills 4</li>
     </ul>
 </body>
