--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 </head>
 
 <body>
-    <h1>Eva</h1>
+    <div>
+        <h1>Eva</h1>
+    </div>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore hic perspiciatis deserunt quia repellendus quo, quod rem, optio ut autem earum, laudantium unde adipisci nesciunt ipsa ea et? Sint, veritatis!</p>
     <ol>
         <li>Education 1</li>
