--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
-<head>
-    <link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
-    <div>
-        <h1>Eva</h1>
-    </div>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore hic perspiciatis deserunt quia repellendus quo, quod rem, optio ut autem earum, laudantium unde adipisci nesciunt ipsa ea et? Sint, veritatis!</p>
-    <ol>
-        <li>Education 1</li>
-        <li>Education 2</li>
-        <li>Education 3</li>
-        <li>Education 4</li>
-    </ol>
-    <ul>
-        <li>Skills 1</li>
-        <li>Skills 2</li>
-        <li>Skills 3</li>
-        <li>Skills 4</li>
-    </ul>
-</body>
+<!DOCTYPE html>
+<html>
+    <head>
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    <body>
+        <div>
+            <h1>Eva</h1>
+        </div>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore hic perspiciatis deserunt quia repellendus quo, quod rem, optio ut autem earum, laudantium unde adipisci nesciunt ipsa ea et? Sint, veritatis!</p>
+        <ol>
+            <li>Education 1</li>
+            <li>Education 2</li>
+            <li>Education 3</li>
+            <li>Education 4</li>
+        </ol>
+        <ul>
+            <li>Skills 1</li>
+            <li>Skills 2</li>
+            <li>Skills 3</li>
+            <li>Skills 4</li>
+        </ul>
+    </body>
+</html>
