--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
+<html lang="en">
 <html>
     <head>
+        <title>Lorem ipsum</title>
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
