--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <div>
-            <h1>Eva</h1>
-        </div>
+        <h1>Eva</h1>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore hic perspiciatis deserunt quia repellendus quo, quod rem, optio ut autem earum, laudantium unde adipisci nesciunt ipsa ea et? Sint, veritatis!</p>
-        <ol>
+        <div class="profile-image">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore hic perspiciatis deserunt quia repellendus quo, quod rem, optio ut autem earum, laudantium unde adipisci nesciunt ipsa ea et? Sint, veritatis!</p>
+        </div>
+            <ol>
             <li>Education 1</li>
             <li>Education 2</li>
             <li>Education 3</li>
