--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
     <body>
         <h1>Eva</h1>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore hic perspiciatis deserunt quia repellendus quo, quod rem, optio ut autem earum, laudantium unde adipisci nesciunt ipsa ea et? Sint, veritatis!</p>
-        <div class="profile-image">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore hic perspiciatis deserunt quia repellendus quo, quod rem, optio ut autem earum, laudantium unde adipisci nesciunt ipsa ea et? Sint, veritatis!</p>
-        </div>
+        <div class="profile-image">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</div>
             <ol>
             <li>Education 1</li>
             <li>Education 2</li>
