--- a/portfolio.html
+++ b/portfolio.html
@@ -1,1 +1,12 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>MyPortfolio</title>
+    <link rel="stylesheet" href="styles.css">
+  </head>
+  <body>
+    <h1>MyPortfolio</h1>
+    <div>Home</div>
+    <div>Image</div>
+  </body>
+</html>
