--- a/portfolio.html
+++ b/portfolio.html
@@ -5,8 +5,11 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
+    <div>
+      <a href="index.html">Home</a>
+    </div>
     <h1>MyPortfolio</h1>
-    <div>Home</div>
+
     <div>Image</div>
   </body>
 </html>
