--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,8 @@
       <a href="index.html">Home</a>
     </div>
     <h1>MyPortfolio</h1>
-
-    <div>Image</div>
+    <div>
+      <img src="https://picsum.photos/id/237/200/300" alt="Black Labrador Retriever looking straight at the camera">
+    </div>
   </body>
 </html>
