--- a/portfolio.html
+++ b/portfolio.html
@@ -11,6 +11,10 @@
     <h1>MyPortfolio</h1>
     <div>
       <img src="https://picsum.photos/id/237/200/300" alt="Black Labrador Retriever looking straight at the camera">
+      <figure>
+        <img src="https://picsum.photos/id/275/500" width="300" height="300" alt="A seagull standing on a wooden railing">
+        <figcaption>Seagulls are experts at photobombing beach pictures.</figcaption>
+      </figure>
     </div>
   </body>
 </html>
