--- a/portfolio.html
+++ b/portfolio.html
@@ -15,6 +15,9 @@
         <img src="https://picsum.photos/id/275/500" width="300" height="300" alt="A seagull standing on a wooden railing">
         <figcaption>Seagulls are experts at photobombing beach pictures.</figcaption>
       </figure>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore hic perspiciatis deserunt quia repellendus quo, quod rem, optio ut autem earum, laudantium unde adipisci nesciunt ipsa ea et? Sint, veritatis!</p>
+      <h2>My progress in HTML and CSS skills</h2>
+      <progress value="25" max="100">25 %</progress>
     </div>
   </body>
 </html>
