--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <div>
+    <div class="navigation">
       <a href="index.html">Home</a>
     </div>
     <h1>MyPortfolio</h1>
