--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <div>
+        <div class="navigation">
             <a href="portfolio.html">Portfolio</a>
         </div>
         <h1>Eva</h1>
