--- a/portfolio.html
+++ b/portfolio.html
@@ -5,9 +5,7 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <div class="navigation">
-      <a href="index.html">Home</a>
-    </div>
+    <div class="navigation"><a href="index.html">Home</a></div>
     <h1>MyPortfolio</h1>
     <div>
       <img src="https://picsum.photos/id/237/200/300" alt="Black Labrador Retriever looking straight at the camera">
