--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
       </figure>
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore hic perspiciatis deserunt quia repellendus quo, quod rem, optio ut autem earum, laudantium unde adipisci nesciunt ipsa ea et? Sint, veritatis!</p>
       <h2>My progress in HTML and CSS skills</h2>
-      <progress value="25" max="100">25 %</progress>
+      <progress value="25" max="100">25</progress>
     </div>
   </body>
 </html>
