--- a/portfolio.html
+++ b/portfolio.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <title>MyPortfolio</title>
     <link rel="stylesheet" href="styles.css">
   </head>
+
   <body>
-    <div class="navigation"><a href="index.html">Home</a></div>
-    <h1>MyPortfolio</h1>
+
+    <header>
+      <h1>MyPortfolio</h1>
+    </header>
+
+    <nav>
+      <a href="index.html">Home</a><br>
+      <a href="portfolio.html">Portfolio</a><br>
+      <a href="#contact">Contact</a>
+    </nav>
+
     <div>
       <img src="https://picsum.photos/id/237/200/300" alt="Black Labrador Retriever looking straight at the camera">
       <figure>
@@ -17,5 +28,7 @@
       <h2>My progress in HTML and CSS skills</h2>
       <progress value="25" max="100">25</progress>
     </div>
+
   </body>
+
 </html>
