--- a/portfolio.html
+++ b/portfolio.html
@@ -29,6 +29,11 @@
       <progress value="25" max="100">25</progress>
     </div>
 
+    <footer id="contact">
+      <a href="mailto:xxx@xxx.fi">xxx@xxx.fi</a>
+      <address>Disneyland, USA</address>
+    </footer>
+
   </body>
 
 </html>
