--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
             <h3>Contact</h3>
             <ul>
                 <li>&#9993;<a href="mailto:xxx@xxx.fi">xxx@xxx.fi</a></li>
-                <li>&#x1F4DE;<a href="tel: 000 000 0000">000 000 0000</a></li>
+                <li>&#x1F4DE;<a href="tel:0000000000">000 000 0000</a></li>
                 <li>&#x1F3E0; <address>Disneyland, USA</address></li>
             </ul>
         </footer>
